@@ -6,6 +6,7 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 import org.springframework.web.cors.CorsConfiguration;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -16,12 +17,14 @@ public class CorsConfig {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
 
-        config.setAllowedOrigins(List.of("*"));  // Permitir todas las solicitudes de cualquier origen
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));  // Permitir todos los métodos
-        config.setAllowedHeaders(List.of("*"));  // Permitir todos los headers
-        config.setAllowCredentials(true);  // Permitir credenciales (si es necesario)
+        // Permitir todos los orígenes con patrones
+        config.setAllowedOriginPatterns(Arrays.asList("*")); // Cambiar setAllowedOrigins a setAllowedOriginPatterns
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS")); // Métodos permitidos
+        config.setAllowedHeaders(Arrays.asList("*")); // Permitir todos los headers
+        config.setAllowCredentials(true); // Permitir credenciales
 
         source.registerCorsConfiguration("/**", config);
         return new CorsFilter(source);
     }
+
 }
